--- a/backend/auth-service/src/main/resources/application.properties
+++ b/backend/auth-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Auth Service Configuration
-server.port=8081
+server.port=${PORT:8081}
 spring.application.name=auth-service
 
 # MySQL Database Configuration
