--- a/backend/auth-service/pom.xml
+++ b/backend/auth-service/pom.xml
@@ -52,6 +52,10 @@
             <artifactId>spring-security-crypto</artifactId>
             <version>6.5.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
