Switched database from H2 to MySQL
Updated application.properties to use MySQL instead of H2 with database connection parameters now sourced from environment variables. Adjusted JPA and Hibernate settings to match MySQL requirements and improved configuration flexibility

--- a/backend/docs-service/src/main/resources/application.properties
+++ b/backend/docs-service/src/main/resources/application.properties
@@ -1,16 +1,18 @@
-server.port=8082
+# Docs Service Configuration
+server.port=${PORT:8082}
 spring.application.name=docs-service
 
-# H2 Database configuration
-spring.datasource.url=jdbc:h2:mem:docsdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# MySQL Database Configuration
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA configuration
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.h2.console.enabled=true
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=true
 
 # CORS configuration
 spring.web.cors.allowed-origins=http://localhost:3000
